OldStuff/tests/copies/newAndNeedChangeTests/fail/Native.java
package fail;

import java.lang.System;

public class Native {

  public static void main(String[] args ) {
    native = "this is a native";
  }

}
